# haifisch

./: haifisch.cabal  stack.yaml
src/Disassembler/: Haifisch.hs
src/Disassembler/Haifisch/: Binary.hs  Computation.hs  Condition.hs  Instruction.hs  Register.hs
