name:                haifisch
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              bsmt
maintainer:          bsmt@krax.in
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Disassembler.Haifisch,
                       Disassembler.Haifisch.Instruction,
                       Disassembler.Haifisch.Register,
                       Disassembler.Haifisch.Computation,
                       Disassembler.Haifisch.Binary
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       binary, binary-bits
  hs-source-dirs:      src
  default-language:    Haskell2010